examples/bad/unknown_type_1.ez
id : MyType -> MyType;
id a = a;

main : Integer;
main = 0;
